--- a/information/Information.html
+++ b/information/Information.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Information.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>AG Design: Information</title>
     <link rel="shortcut icon" href="/img/LOGO VUELTAS_Mesa de trabajo 1.png" type="image/x-icon">
 </head>
+
 <body>
     <div class="body-container">
         <header>
@@ -24,13 +27,13 @@
                         <li>
                             <a href="/index.html" class="a1">Inicio</a>
                         </li>
-                        <li >
+                        <li>
                             <a href="/owners/Owners.html" class="a2">Owners</a>
                         </li>
-                        <li >
+                        <li>
                             <a href="/desing plans/Desing_Plans.html" class="a3">Design Plans</a>
                         </li>
-                        <li >
+                        <li>
                             <a href="/Contact Us/Contact_Us.html" class="a4">Contact Us</a>
                         </li>
                     </ul>
@@ -49,7 +52,53 @@
             </div>
         </header>
         <article>
-            
+            <div class="information-container">
+                <div class="information">
+                    <div class="information1">
+                        <div class="information-1">
+                            <div class="information-tittle">
+                                <h1 class="hg">Plan Gold</h1>
+                            </div>
+                            <div class="information-plan">
+                                <p></p>
+                            </div>
+                            <div class="information-price">
+                                <a href="../desing plans/Desing_Plans.html">Price</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="information">
+                    <div class="information2">
+                        <div class="information-2">
+                        <div class="information-tittle">
+                            <h1 class="hs">Plan Silver</h1>
+                        </div>
+                        <div class="information-plan">
+                            <p></p>
+                        </div>
+                        <div class="information-price">
+                            <a href="../desing plans/Desing_Plans.html">Price</a>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+                <div class="information">
+                    <div class="information3">
+                        <div class="information-3">
+                        <div class="information-tittle">
+                            <h1 class="hb">Plan Bronze</h1>
+                        </div>
+                        <div class="information-plan">
+                            <p></p>
+                        </div>
+                        <div class="information-price">
+                            <a href="../desing plans/Desing_Plans.html">Price</a>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            </div>
         </article>
         <footer>
 
@@ -57,4 +106,5 @@
     </div>
 </body>
 <script src="/information/Information.js"></script>
+
 </html>
