--- a/desing plans/Desing_Plans.html
+++ b/desing plans/Desing_Plans.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Desing_Plans.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>AG Design: Desing Plans</title>
     <link rel="shortcut icon" href="/img/LOGO VUELTAS_Mesa de trabajo 1.png" type="image/x-icon">
 </head>
+
 <body>
     <div class="body-container">
         <header>
@@ -24,13 +30,13 @@
                         <li>
                             <a href="/index.html" class="a1">Inicio</a>
                         </li>
-                        <li >
+                        <li>
                             <a href="/owners/Owners.html" class="a2">Owners</a>
                         </li>
-                        <li >
+                        <li>
                             <a href="/information/Information.html" class="a3">Information</a>
                         </li>
-                        <li >
+                        <li>
                             <a href="/Contact Us/Contact_Us.html" class="a4">Contact Us</a>
                         </li>
                     </ul>
@@ -49,7 +55,7 @@
             </div>
         </header>
         <article>
-            
+
         </article>
         <footer>
 
@@ -57,4 +63,5 @@
     </div>
 </body>
 <script src="/desing plans/Desing_plans.js"></script>
+
 </html>
