--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -14,7 +17,7 @@
 
 <body>
     <div class="body-container">
-        <img src="img/FONDO DE WEB_Mesa de trabajo 1.png"  alt="" class="imgfondo">
+        <img src="img/FONDO DE WEB_Mesa de trabajo 1.png" alt="" class="imgfondo">
         <header>
             <div class="menu-btn">
                 <i class="fas fa-bars btn-menu"></i>
@@ -100,7 +103,7 @@
                                 </div>
                             </li>
                             <li class="plans plan3 t3">
-                                <h1>Bronce Plan</h1>
+                                <h1>Bronze Plan</h1>
                                 <div class="i">
                                     <i class="fas fa-circle"></i>
                                     <i class="fas fa-circle"></i>
@@ -121,7 +124,6 @@
             </div>
         </article>
     </div>
-
     <script src="animation.js"></script>
 </body>
 
