--- a/information/Information.html
+++ b/information/Information.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Information.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -54,16 +57,21 @@
         <article>
             <div class="information-container">
                 <div class="information">
+                    <div class="show-info1 info1">
+                        <p></p>
+                    </div>
                     <div class="information1">
                         <div class="information-1">
                             <div class="information-tittle">
                                 <h1 class="hg">Plan Gold</h1>
                             </div>
                             <div class="information-plan">
-                                <p></p>
+                                <img src="" alt="">
                             </div>
                             <div class="information-price">
-                                <a href="../desing plans/Desing_Plans.html">Price</a>
+                                <p class="btn-info1">Show Info <i class="fas fa-book btn-info"></i></p>
+                                <a href="../desing plans/Desing_Plans.html">Price<i
+                                        class="fas fa-angle-double-right btn-price"></i></a>
                             </div>
                         </div>
                     </div>
@@ -71,31 +79,42 @@
                 <div class="information">
                     <div class="information2">
                         <div class="information-2">
-                        <div class="information-tittle">
-                            <h1 class="hs">Plan Silver</h1>
-                        </div>
-                        <div class="information-plan">
-                            <p></p>
-                        </div>
-                        <div class="information-price">
-                            <a href="../desing plans/Desing_Plans.html">Price</a>
+                            <div class="information-tittle">
+                                <h1 class="hs">Plan Silver</h1>
+                            </div>
+                            <div class="information-plan">
+                                <img src="" alt="">
+                            </div>
+                            <div class="information-price">
+                                <p class="btn-info2">Show Info <i class="fas fa-book btn-info"></i></p>
+                                <a href="../desing plans/Desing_Plans.html">Price<i
+                                        class="fas fa-angle-double-right btn-price"></i></a>
+                            </div>
                         </div>
                     </div>
+                    <div class="show-info2 info2 info4">
+                        <p></p>
                     </div>
                 </div>
                 <div class="information">
-                    <div class="information3">
-                        <div class="information-3">
-                        <div class="information-tittle">
-                            <h1 class="hb">Plan Bronze</h1>
-                        </div>
-                        <div class="information-plan">
-                            <p></p>
-                        </div>
-                        <div class="information-price">
-                            <a href="../desing plans/Desing_Plans.html">Price</a>
-                        </div>
+                    <div class="show-info3 info3">
+                        <p></p>
                     </div>
+                    <div class="information3">
+
+                        <div class="information-3">
+                            <div class="information-tittle">
+                                <h1 class="hb">Plan Bronze</h1>
+                            </div>
+                            <div class="information-plan">
+                                <img src="" alt="">
+                            </div>
+                            <div class="information-price">
+                                <p class="btn-info3">Show Info <i class="fas fa-book btn-info"></i></p>
+                                <a href="../desing plans/Desing_Plans.html">Price<i
+                                        class="fas fa-angle-double-right btn-price"></i></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
