--- a/owners/Owners.html
+++ b/owners/Owners.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Owner.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>AG Design: Owners</title>
     <link rel="shortcut icon" href="/img/LOGO VUELTAS_Mesa de trabajo 1.png" type="image/x-icon">
 </head>
+
 <body>
     <div class="body-container">
         <header>
@@ -24,13 +30,13 @@
                         <li>
                             <a href="/index.html" class="a1">Inicio</a>
                         </li>
-                        <li >
+                        <li>
                             <a href="/information/Information.html" class="a2">Information</a>
                         </li>
-                        <li >
+                        <li>
                             <a href="/desing plans/Desing_Plans.html" class="a3">Design Plans</a>
                         </li>
-                        <li >
+                        <li>
                             <a href="/Contact Us/Contac_Us.html" class="a4">Contact Us</a>
                         </li>
                     </ul>
@@ -64,15 +70,31 @@
                     <img src="/img/LOGO_Mesa de trabajo 1.png" alt="" class="img img3">
                 </div>
                 <div class="Owner-Information">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum deleniti architecto quia laboriosam dolore similique, labore dolor nihil. Asperiores aspernatur magnam sunt nobis nam dolorum earum, dicta, officiis dignissimos commodi doloribus temporibus cupiditate ipsum, laborum atque eum et modi ipsam reprehenderit impedit dolore accusamus. Perspiciatis tempore, expedita optio dolore dolores iure qui, molestias aliquid accusantium consectetur eos molestiae magnam sunt suscipit ullam, harum consequatur at consequuntur dolorum officia nemo aspernatur illum! Voluptatibus repudiandae ea qui iste exercitationem commodi alias obcaecati numquam, reiciendis ut vel quo praesentium distinctio illo vero dolorum fuga facilis id? Consequuntur sapiente earum repellendus est nam dicta!
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum deleniti architecto quia
+                        laboriosam dolore similique, labore dolor nihil. Asperiores aspernatur magnam sunt nobis nam
+                        dolorum earum, dicta, officiis dignissimos commodi doloribus temporibus cupiditate ipsum,
+                        laborum atque eum et modi ipsam reprehenderit impedit dolore accusamus. Perspiciatis tempore,
+                        expedita optio dolore dolores iure qui, molestias aliquid accusantium consectetur eos molestiae
+                        magnam sunt suscipit ullam, harum consequatur at consequuntur dolorum officia nemo aspernatur
+                        illum! Voluptatibus repudiandae ea qui iste exercitationem commodi alias obcaecati numquam,
+                        reiciendis ut vel quo praesentium distinctio illo vero dolorum fuga facilis id? Consequuntur
+                        sapiente earum repellendus est nam dicta!
                         bajo presión, habilidades de liderazgo.<br><br>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione sunt saepe quae tempore, explicabo dolores non blanditiis esse dicta soluta, enim, nam quidem. Fugiat labore non praesentium quos perspiciatis neque commodi quo nam totam asperiores, illum quia ad enim atque voluptatum recusandae! Vel tempora distinctio nostrum odio dolores esse consequatur!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione sunt saepe quae tempore,
+                        explicabo dolores non blanditiis esse dicta soluta, enim, nam quidem. Fugiat labore non
+                        praesentium quos perspiciatis neque commodi quo nam totam asperiores, illum quia ad enim atque
+                        voluptatum recusandae! Vel tempora distinctio nostrum odio dolores esse consequatur!
                         <br><br>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis numquam voluptas saepe. Soluta ratione quam suscipit nesciunt, laboriosam itaque neque excepturi unde, error quas sit eos in quo quos non molestias pariatur? Laudantium, laboriosam exercitationem culpa doloremque ut id explicabo doloribus ducimus voluptatibus autem, iure illum tempore unde tenetur consequuntur.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis numquam voluptas saepe. Soluta
+                        ratione quam suscipit nesciunt, laboriosam itaque neque excepturi unde, error quas sit eos in
+                        quo quos non molestias pariatur? Laudantium, laboriosam exercitationem culpa doloremque ut id
+                        explicabo doloribus ducimus voluptatibus autem, iure illum tempore unde tenetur consequuntur.
                         <br><br>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi cum tempore cumque illo perferendis ipsum incidunt quo error possimus et..</p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi cum tempore cumque illo
+                        perferendis ipsum incidunt quo error possimus et..
+                    </p>
                 </div>
-            <div>
+                <div>
         </article>
         <footer>
 
@@ -80,4 +102,5 @@
     </div>
 </body>
 <script src="/owners/Owner.js"></script>
+
 </html>
