--- a/Contact Us/Contact_Us.html
+++ b/Contact Us/Contact_Us.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
@@ -55,7 +57,37 @@
             </div>
         </header>
         <article>
-
+            <div class="main">
+                <div class="navigation active">
+                    <span style="--i:0;--x:-1;--y:0;">
+                        <ion-icon name="logo-facebook"></ion-icon>
+                    </span>
+                    <span style="--i:1;--x:1;--y:0;">
+                        <ion-icon name="logo-instagram"></ion-icon>
+                    </span>
+                    <span style="--i:2;--x:0;--y:-1;">
+                        <ion-icon name="logo-twitter"></ion-icon>
+                    </span>
+                    <span style="--i:3;--x:0;--y:1;">
+                        <ion-icon name="logo-twitch"></ion-icon>
+                    </span>
+                    <span style="--i:4;--x:-1;--y:1;">
+                        <ion-icon name="logo-youtube"></ion-icon>
+                    </span>
+                    <span style="--i:5;--x:-1;--y:-1;">
+                        <ion-icon name="logo-discord"></ion-icon>
+                    </span>
+                    <span style="--i:6;--x:1;--y:-1;">
+                        <ion-icon name="logo-github"></ion-icon>
+                    </span>
+                    <span style="--i:7;--x:1;--y:1;">
+                        <ion-icon name="logo-codepen"></ion-icon>
+                    </span>
+                </div>
+                <div class="close"><ion-icon name="close-outline"></ion-icon></div>
+            </div>
+            <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"> </script>
+            <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js">	     </script>
         </article>
         <footer>
 
