--- a/information/Information.html
+++ b/information/Information.html
@@ -58,15 +58,19 @@
             <div class="information-container">
                 <div class="information">
                     <div class="show-info1 info1">
-                        <p></p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel exercitationem inventore maxime laudantium explicabo, iste quia dicta minima totam quam veniam nihil. Cumque illum hic repellendus deleniti totam eveniet est?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas et laborum neque nemo esse. Porro exercitationem veritatis, minus aliquid modi deserunt. Ratione labore expedita est repudiandae laborum at ex, voluptate, in aut aperiam aspernatur beatae aliquam quia veritatis perspiciatis error! Voluptatum nisi incidunt odit ducimus cum quae maxime dicta! Blanditiis error non magnam exercitationem molestiae reiciendis optio nostrum aut laborum cupiditate ut quod ab hic tempora atque cum modi, officiis quo inventore ipsam! Assumenda perspiciatis, ratione placeat, quidem tempore aperiam, ab aut ipsum maiores a qui earum ea velit quisquam eaque error iste reiciendis et impedit veritatis sed? Necessitatibus, suscipit molestiae culpa natus libero, in non ipsam illum maiores itaque eveniet porro perferendis voluptate totam ducimus veritatis amet quibusdam atque ea nihil similique! Provident nam repellendus quibusdam doloremque sapiente ipsum alias quas reprehenderit eius debitis optio blanditiis quo consequuntur culpa, officia quidem temporibus neque magnam maxime? Fuga obcaecati rerum labore tempora exercitationem aut molestias itaque, dolores dolore, minus consequatur vero quia iste soluta impedit suscipit? Ipsum voluptatibus nobis quos repellat incidunt. Dolore, culpa iste. Nam assumenda tenetur omnis repellat. Laborum nisi modi, magnam dolorum, eligendi facilis ad culpa fugit nulla, quaerat unde soluta rerum perferendis rem consectetur. Beatae, quam amet.</p>
                     </div>
+                    <!-- <div class="article-img">
+                        <img src="/img/LOGO VUELTAS_Mesa de trabajo 1.png" alt="" class="img rotation">
+                        <img src="/img/LOGO_Mesa de trabajo 1.png" alt="" class="img img3">
+                    </div> -->
                     <div class="information1">
                         <div class="information-1">
                             <div class="information-tittle">
                                 <h1 class="hg">Plan Gold</h1>
                             </div>
                             <div class="information-plan">
-                                <img src="" alt="">
+                                <img src="/img/pexels-olena-bohovyk-18254094.jpg" alt="">
                             </div>
                             <div class="information-price">
                                 <p class="btn-info1">Show Info <i class="fas fa-book btn-info"></i></p>
@@ -83,7 +87,7 @@
                                 <h1 class="hs">Plan Silver</h1>
                             </div>
                             <div class="information-plan">
-                                <img src="" alt="">
+                                <img src="/img/pexels-mayur-gawade-12967160.jpg" alt="">
                             </div>
                             <div class="information-price">
                                 <p class="btn-info2">Show Info <i class="fas fa-book btn-info"></i></p>
@@ -92,14 +96,27 @@
                             </div>
                         </div>
                     </div>
+                    <div class="article-img article-img2">
+                        <img src="/img/LOGO VUELTAS_Mesa de trabajo 1.png" alt="" class="img rotation">
+                        <img src="/img/LOGO_Mesa de trabajo 1.png" alt="" class="img img3">
+                    </div>
                     <div class="show-info2 info2 info4">
-                        <p></p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nulla doloremque officiis ad dicta, aut voluptatibus rem eligendi aspernatur tenetur!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui tempore doloribus, facere nesciunt molestias sunt minima saepe ducimus doloremque assumenda illum voluptates accusantium ea, nobis molestiae quae explicabo delectus enim?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. At optio sed non iure alias veniam quod molestiae iusto, recusandae quaerat incidunt corrupti voluptatibus animi eos ut numquam ad distinctio sint.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione debitis magni earum, facilis minus nostrum sit sequi porro numquam cupiditate excepturi nulla non adipisci modi sapiente quis alias ut animi.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis accusantium eaque vero expedita explicabo minima nobis reiciendis qui eligendi deleniti! Itaque dignissimos obcaecati quidem impedit hic quas labore distinctio incidunt.<br>
+                        </p>
                     </div>
                 </div>
                 <div class="information">
                     <div class="show-info3 info3">
-                        <p></p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, totam eveniet velit blanditiis quo, <br>voluptate corrupti iste doloremque dolorum excepturi fugiat voluptas non. Inventore, blanditiis harum numquam voluptas quis facere nobis officiis quae quas accusantium. Eum, fugiat ipsam aliquam delectus quaerat, qui eius est voluptas necessitatibus molestiae porro fuga consectetur laboriosam velit natus suscipit adipisci fugit rem consequuntur enim praesentium! Architecto, a voluptas eum enim delectus porro, dicta ratione libero, obcaecati exercitationem ea ullam et dignissimos debitis laboriosam eveniet numquam alias repudiandae aliquid illum eius quod? Sequi mollitia cumque dolorum amet est non corrupti placeat asperiores ut, odit beatae hic provident. Ratione quibusdam quos optio laudantium tenetur harum minima, labore nostrum odio error magnam, cupiditate, fuga nesciunt ea alias? Magni, ipsum sit! Vitae quam reiciendis odio numquam repellat optio consectetur modi amet expedita incidunt adipisci laborum impedit quas, corporis voluptatem voluptas quod quae voluptatibus aperiam, laboriosam eveniet doloribus omnis nisi tempore! Impedit ad dolore atque eum cupiditate amet ea quae ex obcaecati ab laboriosam iure eveniet voluptates quas, libero nam asperiores hic. Atque minima reiciendis, delectus nostrum deserunt corrupti quae! Possimus harum iste earum esse quod distinctio est consequatur reprehenderit? Vitae, quos sapiente ex maiores sunt a voluptatem incidunt minus.<br> </p>
                     </div>
+                    <!-- <div class="article-img">
+                        <img src="/img/LOGO VUELTAS_Mesa de trabajo 1.png" alt="" class="img rotation">
+                        <img src="/img/LOGO_Mesa de trabajo 1.png" alt="" class="img img3">
+                    </div> -->
                     <div class="information3">
 
                         <div class="information-3">
@@ -107,7 +124,7 @@
                                 <h1 class="hb">Plan Bronze</h1>
                             </div>
                             <div class="information-plan">
-                                <img src="" alt="">
+                                <img src="/img/pexels-matheus-viana-9420357.jpg" alt="">
                             </div>
                             <div class="information-price">
                                 <p class="btn-info3">Show Info <i class="fas fa-book btn-info"></i></p>
