--- a/index.html
+++ b/index.html
@@ -127,6 +127,8 @@
         </article>
     </div>
     <script src="animation.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2959445646476011"
+     crossorigin="anonymous"></script>
 </body>
 
 </html>
