--- a/desing plans/Desing_Plans.html
+++ b/desing plans/Desing_Plans.html
@@ -58,7 +58,9 @@
 
         </article>
         <footer>
-
+            <div>
+                <p>Copyright © 2023 by Grey's Art</p>
+            </div>
         </footer>
     </div>
 </body>
