--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Ag design, greymir, greysart, diseñador grafico, designer, graphic designer">
-<meta name="google-adsense-account" content="ca-pub-2959445646476011">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
@@ -125,10 +124,14 @@
                 </div>
             </div>
         </article>
+        <footer>
+            <div>
+                <p>Copyright © 2023 by Grey's Art</p>
+            </div>
+        </footer>
     </div>
+
     <script src="animation.js"></script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2959445646476011"
-     crossorigin="anonymous"></script>
 </body>
 
 </html>
