--- a/information/Information.html
+++ b/information/Information.html
@@ -69,7 +69,7 @@
                             <div class="information-tittle">
                                 <h1 class="hg">Plan Gold</h1>
                             </div>
-                            <div class="information-plan">
+                            <div class="information-plan img-plan1">
                                 <img src="/img/pexels-olena-bohovyk-18254094.jpg" alt="">
                             </div>
                             <div class="information-price">
@@ -86,7 +86,7 @@
                             <div class="information-tittle">
                                 <h1 class="hs">Plan Silver</h1>
                             </div>
-                            <div class="information-plan">
+                            <div class="information-plan img-plan2">
                                 <img src="/img/pexels-mayur-gawade-12967160.jpg" alt="">
                             </div>
                             <div class="information-price">
@@ -123,7 +123,7 @@
                             <div class="information-tittle">
                                 <h1 class="hb">Plan Bronze</h1>
                             </div>
-                            <div class="information-plan">
+                            <div class="information-plan img-plan3">
                                 <img src="/img/pexels-matheus-viana-9420357.jpg" alt="">
                             </div>
                             <div class="information-price">
@@ -137,7 +137,9 @@
             </div>
         </article>
         <footer>
-
+            <div>
+                <p>Copyright © 2023 by Grey's Art</p>
+            </div>
         </footer>
     </div>
 </body>
