--- a/owners/Owners.html
+++ b/owners/Owners.html
@@ -37,7 +37,7 @@
                             <a href="/desing plans/Desing_Plans.html" class="a3">Design Plans</a>
                         </li>
                         <li>
-                            <a href="/Contact Us/Contac_Us.html" class="a4">Contact Us</a>
+                            <a href="/Contact Us/Contact_Us.html" class="a4">Contact Us</a>
                         </li>
                     </ul>
                 </div>
@@ -97,7 +97,9 @@
                 <div>
         </article>
         <footer>
-
+            <div>
+                <p>Copyright © 2023 by Grey's Art</p>
+            </div>
         </footer>
     </div>
 </body>
