--- a/Contact Us/Contact_Us.html
+++ b/Contact Us/Contact_Us.html
@@ -90,7 +90,9 @@
             <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js">	     </script>
         </article>
         <footer>
-
+            <div>
+                <p>Copyright © 2023 by Grey's Art</p>
+            </div>
         </footer>
     </div>
 </body>
