--- a/desing plans/Desing_Plans.html
+++ b/desing plans/Desing_Plans.html
@@ -56,7 +56,41 @@
             </div>
         </header>
         <article>
+            <div class="article-desingplans">
+                <div class="price-gold">
+                    <!-- <div class="tittle-price">
+                        <h1>Plan Bronze</h1>
+                    </div>
+                    <divc class="benefit">
 
+                    </div>
+                    <div class="price">
+
+                    </div> -->
+                </div>
+                <div class="price-silver">
+                    <!-- <div class="tittle-price">
+                        <h1>Plan Bronze</h1>
+                    </div>
+                    <divc class="benefit">
+
+                    </div>
+                    <div class="price">
+
+                    </div> -->
+                </div>
+                <div class="price-bronze">
+                    <!-- <div class="tittle-price">
+                        <h1>Plan Bronze</h1>
+                    </div>
+                    <divc class="benefit">
+
+                    </div>
+                    <div class="price">
+
+                    </div> -->
+                </div>
+            </div>
         </article>
         <footer>
             <div>
